BUG#19281: Auto-increment disappeared after create index